# avito-report-builder-app

./: .gitignore  AvitoReportDesktop.spec  MVP_PLAN_AND_STRUCTURE.md  README.md  app.py  architecture.md  desktop_app.py  desktop_app.spec  project_rules.md  pyproject.toml  spec.md
.github/workflows/: main.yml
app/: __init__.py
app/application/: __init__.py  exceptions.py  status.py
app/application/dto/: __init__.py  report_workbook.py
app/application/services/: report_generation.py
app/configs/: column_mapping.yaml  input_schema.yaml  redirect_mapping.yaml  type_rules.yaml  workbook_layout.yaml
app/domain/: __init__.py
app/domain/classification/: __init__.py  type_classifier.py
app/domain/enrichment/: __init__.py  enricher.py
app/domain/models/: report_dataset.py
app/domain/sheet_builders/: __init__.py  admin_sheet.py  chart_sheet.py  summary_sheet.py  weekly_sheet.py
app/domain/summary/: __init__.py  calculator.py
app/domain/transformations/: __init__.py  normalizer.py
app/domain/validation/: __init__.py  (+1 more)
app/infrastructure/: __init__.py
data/: KNOWN_LIMITATIONS.md  MEDIUM_PRIORITY_ANALYSIS.md  REPORT_DIFF_ANALYSIS.md  Untitled  example_backup.xlsx  expected_report.xlsx  input_structure.md  output_report.xlsx  output_structure.md  ~$output_report.xlsx  Статистика_с_2026-03-01_по_2026-03-13.xlsx  Статистика_с_2026-03-09_по_2026-03-15.xlsx
docs/: DIAGNOSIS_type_rules_server.md
scripts/: compare_reports.py  create_sample_input.py  diagnose_reader.py  diagnose_redirect.py  run_report.py
tests/: __init__.py  test_report_generation.py
(+6 files in other folders)
